; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_zfs_ioctl.c_zfs_ioc_wait.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_zfs_ioctl.c_zfs_ioc_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZPOOL_WAIT_ACTIVITY = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@ZPOOL_WAIT_TAG = common dso_local global i32 0, align 4
@ZPOOL_WAIT_WAITED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*, i32*)* @zfs_ioc_wait to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zfs_ioc_wait(i8* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = load i32, i32* @ZPOOL_WAIT_ACTIVITY, align 4
  %14 = call i64 @nvlist_lookup_int32(i32* %12, i32 %13, i32* %8)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %3
  %17 = load i32, i32* @EINVAL, align 4
  store i32 %17, i32* %4, align 4
  br label %42

18:                                               ; preds = %3
  %19 = load i32*, i32** %6, align 8
  %20 = load i32, i32* @ZPOOL_WAIT_TAG, align 4
  %21 = call i64 @nvlist_lookup_uint64(i32* %19, i32 %20, i32* %9)
  %22 = icmp eq i64 %21, 0
  br i1 %22, label %23, label %28

23:                                               ; preds = %18
  %24 = load i8*, i8** %5, align 8
  %25 = load i32, i32* %8, align 4
  %26 = load i32, i32* %9, align 4
  %27 = call i32 @spa_wait_tag(i8* %24, i32 %25, i32 %26, i32* %10)
  store i32 %27, i32* %11, align 4
  br label %32

28:                                               ; preds = %18
  %29 = load i8*, i8** %5, align 8
  %30 = load i32, i32* %8, align 4
  %31 = call i32 @spa_wait(i8* %29, i32 %30, i32* %10)
  store i32 %31, i32* %11, align 4
  br label %32

32:                                               ; preds = %28, %23
  %33 = load i32, i32* %11, align 4
  %34 = icmp eq i32 %33, 0
  br i1 %34, label %35, label %40

35:                                               ; preds = %32
  %36 = load i32*, i32** %7, align 8
  %37 = load i32, i32* @ZPOOL_WAIT_WAITED, align 4
  %38 = load i32, i32* %10, align 4
  %39 = call i32 @fnvlist_add_boolean_value(i32* %36, i32 %37, i32 %38)
  br label %40

40:                                               ; preds = %35, %32
  %41 = load i32, i32* %11, align 4
  store i32 %41, i32* %4, align 4
  br label %42

42:                                               ; preds = %40, %16
  %43 = load i32, i32* %4, align 4
  ret i32 %43
}

declare dso_local i64 @nvlist_lookup_int32(i32*, i32, i32*) #1

declare dso_local i64 @nvlist_lookup_uint64(i32*, i32, i32*) #1

declare dso_local i32 @spa_wait_tag(i8*, i32, i32, i32*) #1

declare dso_local i32 @spa_wait(i8*, i32, i32*) #1

declare dso_local i32 @fnvlist_add_boolean_value(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
